# recommender

./: .env  .gitignore  Cargo.toml  docker-compose.yml  fill_movies.py  requirements.txt  rusty-tags.vi
builder/: association_rules.py  check_csv.py  cluster.py  evidence_log.py  films.csv  item_similarity.py  main.py  movies.py  ratings.py  users.py  utils.py
fill_scripts/: fill_gen_evidence.py  fill_movies.py  fill_ratings.py  films.csv  main.py  tags  utils.py
md/: movies_overlap.md
migrations/2023-04-13-174428_create_users/: down.sql  up.sql
migrations/2023-06-20-105936_create_movies/: down.sql  up.sql
migrations/2023-06-27-121421_create_ratings/: up.sql
migrations/2023-06-28-191527_create_evidence_log/: down.sql  up.sql
migrations/2023-07-17-132017_create_seeded_recs/: down.sql  up.sql
migrations/2023-09-07-143110_create_clusters/: up.sql
migrations/2023-09-12-110547_create_similarity/: down.sql  up.sql
notebooks/: analytics.ipynb
scripts/: fill_explicit_ratings.py  fill_gen_evidence.py  fill_movies.py  main.py  models.py  utils.py
src/: database.rs  main.rs  schema.rs
src/auth/: jwt.rs  mod.rs  processes.rs
src/json_serialization/: mod.rs
src/model/: evidence.rs  mod.rs  movie.rs  rating.rs  recs.rs
src/model/movie/: movie.rs
src/model/user/: new_user.rs  user.rs
src/service/: evidence_log.rs  mod.rs  movie.rs  ratings.rs  recommender.rs  similarity.rs
src/service/movie/: mod.rs
src/views/: mod.rs  path.rs
src/views/analytics/: mod.rs
src/views/auth/: login.rs  logout.rs  mod.rs
src/views/evidence/: get.rs  mod.rs  save.rs
(+7 files in other folders)
