[package]
name = "recommender-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-rt = "1.0"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
futures = "0.3.7"
serde = "1"
actix-service = "1.0.6"
diesel = { version = "2", features = ["postgres", "chrono", "numeric"] }
dotenv = "0.15.0"
bcrypt = "0.8.2"
uuid = { version = "0.8", features = ["serde", "v4"] }
jwt = "0.9.0"
hmac = "0.8.1"
sha2 = "0.9"
log = "0.4.11"
pretty_env_logger = "0.2"

# Needed for Postgres.
openssl = "*"

chrono = { version = "0.4.24", features = ["serde"] }
actix-cors = "0.5.4"
diesel-enum = "0.1.0"
bigdecimal = "0.3.1"
